--- a/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
+++ b/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
@@ -1,5 +1,6 @@
 <template>
-    <lightning-card title="create Client Record" icon-name="custom:custom63" variant="base">
+    <!--Creating Contact Record by Calling Apex Method-->
+    <lightning-card title="Create Contact Record" icon-name="standard:contact" variant="base">
         <div class="slds-m-around_medium">
             <lightning-input label="Contact FirstName" type="text" onchange={handleFirstNameChange}
                 class="slds-m-bottom_x-small"></lightning-input>
