--- a/force-app/main/default/lwc/getPicklistValueDemo/getPicklistValueDemo.html
+++ b/force-app/main/default/lwc/getPicklistValueDemo/getPicklistValueDemo.html
@@ -1,5 +1,27 @@
 <template>
- <lightning-card title="Get Picklist Values" icon-name="custom:custom14">
-    
+ <lightning-card title="Get Account PicklistField Values" icon-name="custom:custom14">
+    <template lwc:if={industryPicklistValues.data}>
+        <lightning-combobox name="progress"
+                            label="Industry"
+                            value={industryvalues}
+                            placeholder="-Select Industry-"
+                            options={industryPicklistValues.data.values}
+                            onchange={handleIndustryChange} 
+                            class="slds-var-p-around_medium">
+        </lightning-combobox>
+  </template><br/>
+  you selected industry: <b>{industryvalues}</b><br/><br/>
+
+    <template lwc:if={typePicklistValues.data}>
+        <lightning-combobox name="progress"
+                            label="Type"
+                            value={typevalues}
+                            placeholder="-Select Type-"
+                            options={typePicklistValues.data.values}
+                            onchange={handleTypeChange} 
+                            class="slds-var-p-around_medium">
+        </lightning-combobox>
+</template></br>
+you selected Account Type: <b>{typevalues}</b><br/><br/>
  </lightning-card>   
 </template>
