--- a/force-app/main/default/lwc/childcmpEvent/childcmpEvent.html
+++ b/force-app/main/default/lwc/childcmpEvent/childcmpEvent.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Child">
+    <lightning-card title="Child Component Event">
         <lightning-button variant="brand" label="Stone" onclick={handleClick}></lightning-button>
         <lightning-button variant="brand" label="Paper" onclick={handleClick}></lightning-button>
         <lightning-button variant="brand" label="Scissor" onclick={handleClick}></lightning-button>
