--- a/force-app/main/default/lwc/parentcmpEvent/parentcmpEvent.html
+++ b/force-app/main/default/lwc/parentcmpEvent/parentcmpEvent.html
@@ -1,5 +1,6 @@
 <template>
-    <c-childcmp-event></c-childcmp-event><br/><br/> 
-    The Button clicked on the child is : {buttonName}
-
+    <lightning-card title="Custom Event Demo">
+        <c-childcmp-event></c-childcmp-event><br /><br />
+        The Button clicked on the child is : {buttonName}
+    </lightning-card>
 </template>
