--- a/force-app/main/default/lwc/childComponent/childComponent.html
+++ b/force-app/main/default/lwc/childComponent/childComponent.html
@@ -1,17 +1,19 @@
 <template>
-  <lightning-card title="Child Component">
-    <p>
-      <lightning-formatted-text value={display}> </lightning-formatted-text>
-    </p>
-    <p>
-      <lightning-formatted-text value={displayGreeting}>
-      </lightning-formatted-text>
-    </p>
-    <p>
-      <lightning-formatted-text value={displayuser}> </lightning-formatted-text>
-    </p>
-    <p>Is User Available :{isUserAvailable}</p>
+    <lightning-card title="Child Component">
+        <p>
+            <lightning-formatted-text value={display}>
+            </lightning-formatted-text>
+        </p>
+        <p>
+            <lightning-formatted-text value={displayGreeting}>
+            </lightning-formatted-text>
+        </p>
+        <p>
+            <lightning-formatted-text value={displayuser}>
+            </lightning-formatted-text>
+        </p>
+        <p> Is User Available :{isUserAvailable} </p>
 
-    <p>The Selected Record is:{selectedNumber}</p>
-  </lightning-card>
+        <p>The Selected Record is:{selectedNumber}</p>
+    </lightning-card>
 </template>
