--- a/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
+++ b/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
@@ -1,6 +1,5 @@
 <template>
-    <!--Creating Contact Record by Calling Apex Method-->
-    <lightning-card title="Create Contact Record" icon-name="standard:contact" variant="base">
+    <lightning-card title="create Contact Record" icon-name="standard:contact" variant="base">
         <div class="slds-m-around_medium">
             <lightning-input label="Contact FirstName" type="text" onchange={handleFirstNameChange}
                 class="slds-m-bottom_x-small"></lightning-input>
