--- a/force-app/main/default/lwc/parentComponent/parentComponent.html
+++ b/force-app/main/default/lwc/parentComponent/parentComponent.html
@@ -1,15 +1,10 @@
 <template>
-  <c-child-component
-    display={greeting}
+    <c-child-component display={greeting}
     dislay-greeting="Welcome to techJourney With Ankit"
     user={userdetails}
-    is-user-available
-  ></c-child-component>
+    is-user-available></c-child-component>
 
-  <!--FIRING A CHILD LIGHTNING WEB COMPONENT METHOD FROM PARENT LWC-->
-  <lightning-button
-    label="unselection"
-    onclick={handleUnselectRecord}
-  ></lightning-button>
-  <c-child-component></c-child-component>
+    <!--FIRING A CHILD LIGHTNING WEB COMPONENT METHOD FROM PARENT LWC-->
+    <lightning-button label="unselection" onclick={handleUnselectRecord}></lightning-button>
+    <c-child-component></c-child-component>
 </template>
