--- a/force-app/main/default/lwc/publishLMS/publishLMS.html
+++ b/force-app/main/default/lwc/publishLMS/publishLMS.html
@@ -1,11 +1,7 @@
 <template>
-  <lightning-card title="Publisher LMS">
-    <div class="slds-var-p-around_small">
-      <lightning-button
-        label="Publish"
-        variant="brand"
-        onclick={publishMessage}
-      ></lightning-button>
-    </div>
-  </lightning-card>
+    <lightning-card title="Publisher LMS">
+        <div class="slds-var-p-around_small">
+            <lightning-button label="Publish" variant="brand" onclick={publishMessage}></lightning-button>
+        </div>
+    </lightning-card>
 </template>
