--- a/force-app/main/default/lwc/contactManagementApp/contactManagementApp.html
+++ b/force-app/main/default/lwc/contactManagementApp/contactManagementApp.html
@@ -1,52 +1,95 @@
 <template>
-    <lightning-card title="Contact Management System">
-        <lightning-layout horizontal-align="spread">
-            <lightning-layout-item flexibility="grow" padding="around-small">
-                <lightning-input type="text" value={searchKey} placeholder="Search Contacts" variant="label-hidden"
-                    onchange={handleSearchChange}></lightning-input>
-            </lightning-layout-item>
-            <lightning-layout-item padding="around-small">
-                <lightning-button label="New Contact" variant="brand" onclick={handleCreateContact}></lightning-button>
-            </lightning-layout-item>
-            <lightning-layout-item padding="around-small">
-                <lightning-button label="Bulk Delete" variant="destructive"
-                    onclick={handleBulkDelete}></lightning-button>
-            </lightning-layout-item>
-        </lightning-layout>
-        <template lwc:if={contacts}>
-            <lightning-datatable key-field="Id" data={contacts} columns={columns} onrowaction={handleRowAction}
-                onrowselection={handleSelectedRow}>
-            </lightning-datatable>
-            <template lwc:if={isModalOpen}>
-                <section role="dialog" tabindex="-1" aria-modal="true" class="slds-modal slds-fade-in-open">
-                    <div class="slds-modal__container">
-                        <header class="slds-modal__header">
-                            <h2 class="slds-modal__title">Contact</h2>
-                        </header>
-                        <div class="slds-modal__content slds-p-around_medium">
-                            <lightning-record-edit-form object-api-name="Contact" record-id={IdtoEditRecord}
-                                onsuccess={successHandler}>
-                                <lightning-input-field field-name="FirstName"></lightning-input-field>
-                                <lightning-input-field field-name="LastName"></lightning-input-field>
-                                <lightning-input-field field-name="Email"></lightning-input-field>
-                                <lightning-input-field field-name="Phone"></lightning-input-field>
-                                <lightning-input-field field-name="AccountId"></lightning-input-field>
-                                <div class="slds-m-top_medium">
-                                    <lightning-button variant="brand" label="Save" type="submit"
-                                        class="slds-m-right_small"></lightning-button>
-                                    <lightning-button variant="neutral" label="Cancel" onclick={closeModal}
-                                        class="slds-m-right_small"></lightning-button>
-                                </div>
-                            </lightning-record-edit-form>
-                        </div>
-                    </div>
-                </section>
-                <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
-            </template>
-        </template>
+  <lightning-card title="Contact Resource Management">
+    <lightning-layout horizontal-align="spread">
+      <lightning-layout-item flexibility="grow" padding="around-small">
+        <lightning-input
+          type="text"
+          value={searchKey}
+          placeholder="Search Contact"
+          variant="label-hidden"
+          onchange={handleSearchChange}
+        ></lightning-input>
+      </lightning-layout-item>
+      <lightning-layout-item padding="around-small">
+        <lightning-button
+          label="New Contact"
+          variant="brand"
+          onclick={handleCreateContact}
+        ></lightning-button>
+      </lightning-layout-item>
+      <lightning-layout-item padding="around-small">
+        <lightning-button
+          label="Bulk Delete"
+          variant="destructive"
+          onclick={handleBulkDelete}
+        ></lightning-button>
+      </lightning-layout-item>
+    </lightning-layout>
+    <template lwc:if={contacts}>
+      <lightning-datatable
+        key-field="Id"
+        data={contacts}
+        columns={columns}
+        onrowaction={handleRowAction}
+        onrowselection={handleSelectedRow}
+      >
+      </lightning-datatable>
+      <template lwc:if={isModalOpen}>
+        <section
+          role="dialog"
+          tabindex="-1"
+          aria-modal="true"
+          class="slds-modal slds-fade-in-open"
+        >
+          <div class="slds-modal__container">
+            <header class="slds-modal__header">
+              <h2 class="slds-modal__title">Contact</h2>
+            </header>
+            <div class="slds-modal__content slds-p-around_medium">
+              <lightning-record-edit-form
+                object-api-name="Contact"
+                record-id={IdtoEditRecord}
+                onsuccess={successHandler}
+              >
+                <lightning-input-field
+                  field-name="FirstName"
+                ></lightning-input-field>
+                <lightning-input-field
+                  field-name="LastName"
+                ></lightning-input-field>
+                <lightning-input-field
+                  field-name="Email"
+                ></lightning-input-field>
+                <lightning-input-field
+                  field-name="Phone"
+                ></lightning-input-field>
+                <lightning-input-field
+                  field-name="AccountId"
+                ></lightning-input-field>
+                <div class="slds-m-top_medium">
+                  <lightning-button
+                    variant="brand"
+                    label="Save"
+                    type="submit"
+                    class="slds-m-right_small"
+                  ></lightning-button>
+                  <lightning-button
+                    variant="neutral"
+                    label="Cancel"
+                    onclick={closeModal}
+                    class="slds-m-right_small"
+                  ></lightning-button>
+                </div>
+              </lightning-record-edit-form>
+            </div>
+          </div>
+        </section>
+        <div class="slds-backdrop slds-backdrop_open" role="presentation"></div>
+      </template>
+    </template>
 
-        <template lwc:elseif={error}>
-            <div>{error}</div>
-        </template>
-    </lightning-card>
+    <template lwc:elseif={error}>
+      <div>{error}</div>
+    </template>
+  </lightning-card>
 </template>
