--- a/force-app/main/default/lwc/toDoManagerApp/toDoManagerApp.html
+++ b/force-app/main/default/lwc/toDoManagerApp/toDoManagerApp.html
@@ -22,38 +22,39 @@
             <lightning-card title="To Do List">
                 <div class="slds-var-p-around_small">
                     <template for:each={incompleteTask} for:item="currTask" for:index="index">
-                        <div key={currTask.taskname} class="slds-box slds-theme_shade incompletebackground"
-                            draggable="true" ondragstart={dragStartHandler} data-item={index}>
+                        <div key={currTask.taskId} class="slds-box slds-theme_shade incompletebackground"
+                            draggable="true" ondragstart={dragStartHandler} data-item={currTask.taskId}>
                             <div class="slds-grid slds-wrap">
                                 <div class="slds-col slds-size_8-of-12">
                                     <p class="formattaskname">{currTask.taskname}</p>
-                                    <p><lightning-formatted-date-time value={currTask.taskdate} year="2-digit"
+                                    <p>
+                                        <lightning-formatted-date-time value={currTask.taskdate} year="2-digit"
                                             month="short" day="2-digit" weekday="long"></lightning-formatted-date-time>
                                     </p>
                                 </div>
                                 <div class="slds-col slds-size_4-of-12">
                                     <lightning-button-icon icon-name="utility:delete" alternative-text="Delete"
                                         class="slds-m-left_xx-small" title="Delete" onclick={removeHandler}
-                                        name={index}></lightning-button-icon>
+                                        name={currTask.taskId}></lightning-button-icon>
                                     <lightning-button-icon icon-name="utility:check" alternative-text="Check"
                                         class="slds-m-left_xx-small" title="Delete" onclick={completeTaskHandler}
-                                        name={index}></lightning-button-icon>
+                                        name={currTask.taskId}></lightning-button-icon>
                                 </div>
                             </div>
                         </div>
                     </template>
                 </div>
             </lightning-card>
-
         </div>
         <div class="slds-col">
             <lightning-card title="Completed Items">
                 <div class="slds-var-p-around_small">
                     <template for:each={completeTask} for:item="currTask">
-                        <div key={currTask.taskname} class="slds-box slds-theme_shade completebackground"
+                        <div key={currTask.taskId} class="slds-box slds-theme_shade completebackground"
                             ondragover={allowDrop} ondrop={dropElementHandler}>
                             <p class="formattaskname">{currTask.taskname}</p>
-                            <p><lightning-formatted-date-time value={currTask.taskdate} year="2-digit" month="short"
+                            <p>
+                                <lightning-formatted-date-time value={currTask.taskdate} year="2-digit" month="short"
                                     day="2-digit" weekday="long"></lightning-formatted-date-time>
                             </p>
                         </div>
