--- a/force-app/main/default/lwc/wireWithFunction/wireWithFunction.html
+++ b/force-app/main/default/lwc/wireWithFunction/wireWithFunction.html
@@ -1,11 +1,9 @@
 <template>
-    <h2>Account Details</h2>
+  <h2>Account Details</h2>
 
-    <template if:true={accountlist}>
-        <lightning-datatable data={accountlist} columns={columns} key-field="Id">
-        </lightning-datatable>
-    </template>
-    <template if:true={error}>
-        {error}
-    </template>
+  <template if:true={accountlist}>
+    <lightning-datatable data={accountlist} columns={columns} key-field="Id">
+    </lightning-datatable>
+  </template>
+  <template if:true={error}> {error} </template>
 </template>
