--- a/force-app/main/default/lwc/ldsCreateRecord/ldsCreateRecord.html
+++ b/force-app/main/default/lwc/ldsCreateRecord/ldsCreateRecord.html
@@ -14,13 +14,13 @@
         class="slds-var-m-bottom_x-small"
       ></lightning-input>
       <lightning-input
-        label="Name"
+        label="Phone"
         data-id="phone"
         onchange={handlePhoneChange}
         class="slds-var-m-bottom_x-small"
       ></lightning-input>
       <lightning-input
-        label="Name"
+        label="Industry"
         data-id="industry"
         onchange={handleIndustryChange}
         class="slds-var-m-bottom_x-small"
