--- a/force-app/main/default/lwc/getPicklistValueDemo/getPicklistValueDemo.html
+++ b/force-app/main/default/lwc/getPicklistValueDemo/getPicklistValueDemo.html
@@ -1,27 +1,34 @@
 <template>
- <lightning-card title="Get Account PicklistField Values" icon-name="custom:custom14">
+  <lightning-card
+    title="Get Account PicklistField Values"
+    icon-name="custom:custom14"
+  >
     <template lwc:if={industryPicklistValues.data}>
-        <lightning-combobox name="progress"
-                            label="Industry"
-                            value={industryvalues}
-                            placeholder="-Select Industry-"
-                            options={industryPicklistValues.data.values}
-                            onchange={handleIndustryChange} 
-                            class="slds-var-p-around_medium">
-        </lightning-combobox>
-  </template><br/>
-  you selected industry: <b>{industryvalues}</b><br/><br/>
+      <lightning-combobox
+        name="progress"
+        label="Industry"
+        value={industryvalues}
+        placeholder="-Select Industry-"
+        options={industryPicklistValues.data.values}
+        onchange={handleIndustryChange}
+        class="slds-var-p-around_medium"
+      >
+      </lightning-combobox>
+    </template>
+    you selected industry: <b>{industryvalues}</b>
 
     <template lwc:if={typePicklistValues.data}>
-        <lightning-combobox name="progress"
-                            label="Type"
-                            value={typevalues}
-                            placeholder="-Select Type-"
-                            options={typePicklistValues.data.values}
-                            onchange={handleTypeChange} 
-                            class="slds-var-p-around_medium">
-        </lightning-combobox>
-</template></br>
-you selected Account Type: <b>{typevalues}</b><br/><br/>
- </lightning-card>   
+      <lightning-combobox
+        name="progress"
+        label="Type"
+        value={typevalues}
+        placeholder="-Select Type-"
+        options={typePicklistValues.data.values}
+        onchange={handleTypeChange}
+        class="slds-var-p-around_medium"
+      >
+      </lightning-combobox>
+    </template>
+    you selected Account Type: <b>{typevalues}</b><br /><br />
+  </lightning-card>
 </template>
