--- a/force-app/main/default/lwc/newsAppIntegration/newsAppIntegration.html
+++ b/force-app/main/default/lwc/newsAppIntegration/newsAppIntegration.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Sports News">
+    <lightning-card title="Technology News">
         <div class="container">
             <div class="slds-grid slds-gutters slds-wrap justify-center">
                 <template lwc:if={result}>
