--- a/force-app/main/default/lwc/imperativeMethod/imperativeMethod.html
+++ b/force-app/main/default/lwc/imperativeMethod/imperativeMethod.html
@@ -1,5 +1,5 @@
 <template>
-  <lightning-card title="Imperative Apex Demo">
+  <lightning-card title="Imperative Apex Demo" icon-name="standard:account">
     <div class="slds-var-m-small">
       <div class="slds-grid slds-gutters">
         <div class="slds-col slds-size_2-of-3">
