--- a/force-app/main/default/lwc/launchFlowFromLwc/launchFlowFromLwc.html
+++ b/force-app/main/default/lwc/launchFlowFromLwc/launchFlowFromLwc.html
@@ -1,4 +1,8 @@
 <template>
-    <lightning-flow flow-api-name="Launch_Flow_From_LWC" flow-finish-behavior="RESTART"
-        flow-input-variables={inputVariables} onstatuschange={handleStatusChange}></lightning-flow>
+  <lightning-flow
+    flow-api-name="Launch_Flow_From_LWC"
+    flow-finish-behavior="RESTART"
+    flow-input-variables={inputVariables}
+    onstatuschange={handleStatusChange}
+  ></lightning-flow>
 </template>
