--- a/force-app/main/default/lwc/parentComposition/parentComposition.html
+++ b/force-app/main/default/lwc/parentComposition/parentComposition.html
@@ -6,4 +6,4 @@
 </template>
 
 <!--bubbles - false,composed - false : fireChidHandler
-bubbles - true,composed -true  : fireChidHandler, fireChildDivHandler-->
+bubbles - true,composed -true  : fireChildHandler, fireChildDivHandler-->
