--- a/force-app/main/default/lwc/comboboxDemo/comboboxDemo.html
+++ b/force-app/main/default/lwc/comboboxDemo/comboboxDemo.html
@@ -1,11 +1,20 @@
 <template>
-    <!---Lightning Combobox to display Account list by using imperative method...-->
+  <!---Lightning Combobox to display Account list by using imperative method...-->
 
-    <lightning-card title="Accounts Combobox" icon-name="standard:account" variant="base">
-        <lightning-combobox label="Status" value={value} placeholder="Select Account" options={options}
-            onchange={handleChange}>
-        </lightning-combobox>
+  <lightning-card
+    title="Accounts Combobox"
+    icon-name="standard:account"
+    variant="base"
+  >
+    <lightning-combobox
+      label="Status"
+      value={value}
+      placeholder="Select Account"
+      options={options}
+      onchange={handleChange}
+    >
+    </lightning-combobox>
 
-        <p>Selected Value is: {value}</p>
-    </lightning-card>
+    <p>Selected Value is: {value}</p>
+  </lightning-card>
 </template>
