--- a/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
+++ b/force-app/main/default/lwc/createRecordUsingApex/createRecordUsingApex.html
@@ -1,15 +1,39 @@
 <template>
-    <lightning-card title="create Contact Record" icon-name="standard:contact" variant="base">
-        <div class="slds-m-around_medium">
-            <lightning-input label="Contact FirstName" type="text" onchange={handleFirstNameChange}
-                class="slds-m-bottom_x-small"></lightning-input>
-            <lightning-input label="Contact LastName" type="text" onchange={handleLastNameChange}
-                class="slds-m-bottom_x-small"></lightning-input>
-            <lightning-input label="Contact Phone" type="text" onchange={handlePhoneChange}
-                class="slds-m-bottom_x-small"></lightning-input>
-            <lightning-input label="Contact Email" type="text" onchange={handleEmailChange}
-                class="slds-m-bottom_x-small"></lightning-input>
-            <lightning-button label="Create Contact Record" variant="brand" onclick={handleClick}></lightning-button>
-        </div>
-    </lightning-card>
+  <lightning-card
+    title="create Contact Record"
+    icon-name="standard:contact"
+    variant="base"
+  >
+    <div class="slds-m-around_medium">
+      <lightning-input
+        label="Contact FirstName"
+        type="text"
+        onchange={handleFirstNameChange}
+        class="slds-m-bottom_x-small"
+      ></lightning-input>
+      <lightning-input
+        label="Contact LastName"
+        type="text"
+        onchange={handleLastNameChange}
+        class="slds-m-bottom_x-small"
+      ></lightning-input>
+      <lightning-input
+        label="Contact Phone"
+        type="text"
+        onchange={handlePhoneChange}
+        class="slds-m-bottom_x-small"
+      ></lightning-input>
+      <lightning-input
+        label="Contact Email"
+        type="text"
+        onchange={handleEmailChange}
+        class="slds-m-bottom_x-small"
+      ></lightning-input>
+      <lightning-button
+        label="Create Contact Record"
+        variant="brand"
+        onclick={handleClick}
+      ></lightning-button>
+    </div>
+  </lightning-card>
 </template>
