--- a/force-app/main/default/lwc/searchWithDatatable/searchWithDatatable.html
+++ b/force-app/main/default/lwc/searchWithDatatable/searchWithDatatable.html
@@ -9,6 +9,7 @@
       label="Enter Account Name"
       placeholder="Enter Name"
       onchange={handleSearchChange}
+      class="slds-var-p-around_medium"
     ></lightning-input>
 
     <lightning-datatable
