--- a/force-app/main/default/lwc/childComponent/childComponent.html
+++ b/force-app/main/default/lwc/childComponent/childComponent.html
@@ -1,19 +1,35 @@
 <template>
-    <lightning-card title="Child Component">
-        <p>
-            <lightning-formatted-text value={display}>
-            </lightning-formatted-text>
-        </p>
-        <p>
-            <lightning-formatted-text value={displayGreeting}>
-            </lightning-formatted-text>
-        </p>
-        <p>
-            <lightning-formatted-text value={displayuser}>
-            </lightning-formatted-text>
-        </p>
-        <p> Is User Available :{isUserAvailable} </p>
+  <lightning-card title="Child Component" icon-name="standard:account">
+    <p>
+      <lightning-formatted-text value={display}> </lightning-formatted-text>
+    </p>
+    <p>
+      <lightning-formatted-text value={displayGreeting}>
+      </lightning-formatted-text>
+    </p>
+    <p>
+      <lightning-formatted-text value={displayuser}> </lightning-formatted-text>
+    </p>
+    <p>Is User Available :{isUserAvailable}</p>
 
-        <p>The Selected Record is:{selectedNumber}</p>
-    </lightning-card>
+    <p>The Selected Record is:{selectedNumber}</p>
+
+    <!--usecase of lwc:refs and query selector-->
+    <div class="childcss1">
+      <p>I'm a Child Component</p>
+    </div>
+    <p>{handleChild}</p>
+    <lightning-input label="Name" lwc:ref="NameRef"></lightning-input>
+    <lightning-input
+      label="Age"
+      type="Number"
+      lwc:ref="AgeRef"
+    ></lightning-input>
+    <lightning-button
+      label="Submit"
+      class="slds-grid slds-var-m-top_medium"
+      onclick={handleSave}
+      variant="brand"
+    ></lightning-button>
+  </lightning-card>
 </template>
