--- a/force-app/main/default/lwc/refreshViewComponent/refreshViewComponent.html
+++ b/force-app/main/default/lwc/refreshViewComponent/refreshViewComponent.html
@@ -1,6 +1,6 @@
 <template>
   <!--Updating Account Field Values with refresh view-->
-  <lightning-card title="RefreshView in LWC">
+  <lightning-card title="RefreshView in LWC" icon-name="standard:account_info">
     <div class="sld-m-around-medium">
       <lightning-input
         type="text"
