--- a/force-app/main/default/lwc/publisherCmp/publisherCmp.html
+++ b/force-app/main/default/lwc/publisherCmp/publisherCmp.html
@@ -1,11 +1,17 @@
 <template>
-    <lightning-card title="Publish Component">
-        <lightning-input class="slds-p-around_medium" label="Enter Text to Send: " value={strText} 
-            onchange={changeName}></lightning-input>
-        <br/>
-        <lightning-button class="slds-p-around_medium" label="Publish" variant="brand" 
-            onclick={publishEvent}></lightning-button>
-        
-    </lightning-card>
-    
+  <lightning-card title="Publish Component">
+    <lightning-input
+      class="slds-p-around_medium"
+      label="Enter Text to Send: "
+      value={strText}
+      onchange={handleNameChange}
+    ></lightning-input>
+    <br />
+    <lightning-button
+      class="slds-p-around_medium"
+      label="Publish"
+      variant="brand"
+      onclick={publishEvent}
+    ></lightning-button>
+  </lightning-card>
 </template>
