--- a/force-app/main/default/lwc/editDataTableWithRows/editDataTableWithRows.html
+++ b/force-app/main/default/lwc/editDataTableWithRows/editDataTableWithRows.html
@@ -1,23 +1,34 @@
 <template>
-  <template lwc:if={displayData}>
-    <c-custom-data-types
-      key-field="Id"
-      data={contactData}
-      columns={columns}
-      onsave={handleSave}
-      onrowaction={rowactionhandler}
-      onheaderaction={headerActionHandler}
-      draft-values={draftValues}
-    >
-    </c-custom-data-types>
-    <template lwc:if={showModal}>
-      <c-custom-modal-for-datatable
-        is-display-mode={viewMode}
-        is-edit-mode={editMode}
-        record-input-id={selectedRecordId}
-        onclosemodal={closeModal}
+  <lightning-card title="Datatable Series" icon-name="custom:custom14">
+    <div class="slds-m-around_small">
+      <lightning-button
+        label="Delete Multiple Records"
+        variant="destructive"
+        onclick={deleteRecordsHandler}
+        disabled={disableMe}
+      ></lightning-button>
+    </div>
+    <template lwc:if={displayData}>
+      <c-custom-data-types
+        key-field="Id"
+        data={contactData}
+        columns={columns}
+        onsave={handleSave}
+        onrowaction={rowactionhandler}
+        onrowselection={selectedRowHandler}
+        onheaderaction={headerActionHandler}
+        draft-values={draftValues}
       >
-      </c-custom-modal-for-datatable>
+      </c-custom-data-types>
+      <template lwc:if={showModal}>
+        <c-custom-modal-for-datatable
+          is-display-mode={viewMode}
+          is-edit-mode={editMode}
+          record-input-id={selectedRecordId}
+          onclosemodal={closeModal}
+        >
+        </c-custom-modal-for-datatable>
+      </template>
     </template>
-  </template>
+  </lightning-card>
 </template>
